# emg_pose_estimation

./: .gitattributes  .gitignore  README.md
code/: CMakeLists.txt  Makefile  evaluate.py  model.py  preprocess.py  visualize.py
code/capture_data/src/: renderer.cpp  storage.cpp
code/data/: joint_limits.csv  limb_info.csv  limb_lengths.csv  limb_lengths_0.csv
code/include/: BodyBasics.h  stdafx.h  tracking_renderer.h  tracking_storage.h
code/process_data/: filters.py  model.py  preprocess.py
code/run_data/include/: process.h
code/run_data/src/: main.cpp  process.cpp
code/src/: body_basics.cpp  data.cpp  main.cpp  renderer.cpp
code/tests/: evaluate.py  show_zero_pose.py  test_zero_pose.py  visualize.py
